[gd_scene load_steps=4 format=3 uid="uid://bj74g0xpuejid"]

[ext_resource type="Texture2D" uid="uid://d2hqmr8tshdwg" path="res://assets/ui/settings_background.png" id="1_51uel"]
[ext_resource type="Script" uid="uid://3hlr81ddje0e" path="res://scripts/ui/levels_pause_menu.gd" id="1_skslj"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_skslj"]
texture = ExtResource("1_51uel")
texture_margin_left = 5.0
texture_margin_top = 5.0
texture_margin_right = 5.0
texture_margin_bottom = 5.0
expand_margin_left = 20.0
expand_margin_top = 20.0
expand_margin_right = 20.0
expand_margin_bottom = 20.0

[node name="LevelsPauseMenu" type="CanvasLayer"]
process_mode = 3
visible = false
script = ExtResource("1_skslj")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="MarginContainer" type="MarginContainer" parent="Control"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = 231.0
offset_top = 80.5
offset_right = 369.0
offset_bottom = 199.5
grow_horizontal = 2
grow_vertical = 2

[node name="Panel" type="Panel" parent="Control/MarginContainer"]
layout_mode = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_skslj")

[node name="VBoxContainer" type="VBoxContainer" parent="Control/MarginContainer"]
layout_mode = 2

[node name="resume" type="Button" parent="Control/MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Retornar"

[node name="reload" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "recome√ßar"

[node name="exit" type="Button" parent="Control/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "Sair"

[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/resume" to="." method="_on_resume_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/reload" to="." method="_on_reload_pressed"]
[connection signal="pressed" from="Control/MarginContainer/VBoxContainer/exit" to="." method="_on_exit_pressed"]
